Moved media query vars to constants, fixed footer text not centered

--- a/static/src/style/footer.styl
+++ b/static/src/style/footer.styl
@@ -49,7 +49,8 @@
 
   .main-text, a {
     text-align: center
-    color: color-brown  
+    color: color-brown
+    align-self: center
   
     .arrow {
       text-decoration: none
